[package]
name = "management"
version = "0.1.0"
authors = ["cowkeys <cowkeys@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { path = "../../Rocket/core/lib" }
serde = { version = "1.0", features = ["derive"]}
serde_json = ""

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["json"]